# taest_with_teacher10.2

./: pyproject.toml
src/: main.py
tests/: test_main.py
